--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "",
   "author": "",
   "scripts": {
-    "prebuild": "rmdir dist /s /q",
+    "clear": "rmdir dist /s /q",
     "build": "parcel build index.html",
     "dev": "parcel index.html --open",
     "start": "npm run build && npm run dev",
@@ -19,21 +19,23 @@
     "release": "parcel build index.html --no-content-hash --out-dir build"
   },
   "devDependencies": {
-    "autoprefixer": "^9.0.0",
-    "eslint": "^7.31.0",
-    "netlify-cli": "^9.9.1",
-    "parcel-bundler": "^1.12.5",
-    "postcss": "^8.4.7",
-    "sass": "^1.36.0",
-    "typescript": "^4.3.5"
+    "@parcel/transformer-sass": "^2.12.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.12.0",
+    "netlify-cli": "^17.37.0",
+    "parcel": "^2.12.0",
+    "postcss": "^8.4.47",
+    "sass": "^1.79.5",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@georgedoescode/generative-utils": "^1.0.37",
-    "@svgdotjs/svg.js": "^3.1.2",
-    "c": "^1.1.1",
-    "colorthief": "^2.3.2",
+    "@georgedoescode/generative-utils": "^2.0.1",
+    "@netlify/functions": "^2.8.2",
+    "@svgdotjs/svg.js": "^3.2.4",
+    "colorthief": "^2.6.0",
     "cu": "^1.0.0-prerelease0.1",
-    "culori": "^2.0.3",
-    "splitting": "^1.0.6"
+    "culori": "^4.0.1",
+    "dotenv": "^16.4.5",
+    "splitting": "^1.1.0"
   }
 }
