--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,8 @@
   command = "npm run release"
   functions = "netlify/functions"
   publish = "build/"
-
+[functions]
+  node_bundler = "esbuild"
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
   #[[redirects]]
@@ -14,8 +15,8 @@
   ## (optional) Settings for Netlify Dev
   ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
 [dev]
-  command = "npm run dev" # Command to start your dev server
+  command = "npm run release" # Command to start your dev server
   port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
+  publish = "dist" # Folder with the static content for _redirect file
 
   ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
