--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cu": "^1.0.0-prerelease0.1",
     "culori": "^4.0.1",
     "dotenv": "^16.4.5",
+    "node-fetch": "^3.3.2",
     "splitting": "^1.1.0"
   }
 }
